Added major updates

--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -44,7 +44,7 @@
       <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="style-circle-container">
           <div class="style-circle">
-            <img class="image-rocket" src="assets/images/rocket.svg" />
+            <img class="image-rocket" src="assets/images/dark-assets/rocket.svg" />
             <img
               class="image-investor floater-img"
               src="assets/images/hero-investor.png"
@@ -93,7 +93,7 @@
     <div class="why-us-text-container">
       <div>
         <h3 class="section-sub-heading">
-          Developing NFT Application Is Time Taking and Expensive
+          Developing dApps Is Time Taking and Expensive
         </h3>
       </div>
     </div>
@@ -116,10 +116,7 @@
               </div>
 
               <p class="card-text text-center">
-                Launching a scalable NFT app involves multiple moving parts in
-                on-chain (SDKs, IPFS, RPC nodes, smart contracts, wallets) and
-                off-chain (caching, DBs, auto-scaling) logic, with rapidly
-                changing protocols and documentation.
+                Launching a scalable NFT app involves multiple moving parts in on-chain and off-chain logic, with rapidly changing protocols and documentation.
               </p>
             </div>
           </div>
@@ -136,12 +133,11 @@
 
             <div class="card-body">
               <div class="title-container">
-                <h4 class="card-title text-center">Development cost is high</h4>
+                <h4 class="card-title text-center">High Development Cost</h4>
               </div>
 
               <p class="card-text text-center">
-                This usually requires a team of highly skilled and diverse
-                developers, increasing the development cost by a huge margin.
+                This usually requires a team of highly skilled and diverse developers, increasing the development cost by a huge margin.
               </p>
             </div>
           </div>
@@ -162,10 +158,7 @@
                 </h4>
               </div>
               <p class="card-text text-center">
-                Teams spend a significant amount of time reinventing the wheel
-                (caching, making NFTs queryable, etc.) instead of focusing on
-                product and business logic, increasing the go-to-market time for
-                web3 apps.
+                Significant time is spent reinventing the wheel instead of  focusing on the product and the business logic, in turn,  increasing the go-to-market time.
               </p>
             </div>
           </div>
@@ -190,13 +183,13 @@
             <div class="icon-image-container">
               <img
                 class="img-fluid mx-auto icon-card-image"
-                src="assets/images/Supercharge-nft.png"
+                src="assets/images/dark-assets/index-cache.png"
                 alt=""
               />
             </div>
             <div class="icon-title-container">
               <h6>
-                Supercharged NFT<br />
+                Supercharged NFT
                 Reads
               </h6>
             </div>
@@ -213,7 +206,7 @@
             <div class="icon-image-container">
               <img
                 class="img-fluid mx-auto icon-card-image"
-                src="assets/images/database-network.png"
+                src="assets/images/dark-assets/nft-file.png"
                 alt=""
               />
             </div>
@@ -233,7 +226,7 @@
             <div class="icon-image-container">
               <img
                 class="img-fluid mx-auto icon-card-image"
-                src="assets/images/brainstorm-2.png"
+                src="assets/images/dark-assets/nft-marketplace.png"
                 alt=""
               />
             </div>
@@ -257,7 +250,7 @@
             <div class="icon-image-container">
               <img
                 class="img-fluid mx-auto icon-card-image"
-                src="assets/images/public-blockchain.png"
+                src="assets/images/dark-assets/anything-into-NFT.png"
                 alt=""
               />
             </div>
@@ -277,7 +270,7 @@
             <div class="icon-image-container">
               <img
                 class="img-fluid mx-auto icon-card-image"
-                src="assets/images/nft-monitoring.png"
+                src="assets/images/dark-assets/semi-custodial-wallet.png"
                 alt=""
               />
             </div>
@@ -297,7 +290,7 @@
             <div class="icon-image-container">
               <img
                 class="img-fluid mx-auto icon-card-image"
-                src="assets/images/nft-wallet.png"
+                src="assets/images/dark-assets/fungible-tokens.png"
                 alt=""
               />
             </div>
@@ -317,7 +310,7 @@
   </div>
 </div>
 
-<div class="container-fluid things-with-shyft market-blue-background">
+<!-- <div class="container-fluid things-with-shyft market-blue-background">
   <div class="container-lg">
     <div class="row">
       <div class="col-sm-10">
@@ -326,154 +319,96 @@
         </h3>
       </div>
     </div>
-    <div class="market-cards-container">
-      <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4 px-5">
-          <div class="card market-cards">
-            <div class="card-inner">
-              <div class="market-img-container">
-                <img
-                  class="img-fluid"
-                  src="assets/images/Nft-Marketplace.png"
-                  alt=""
-                />
+    
+    <div class="row g-5 why-us-info-box">
+      <div class="col-xs-12 col-sm-12 col-md-4">
+          <div class="why-box-outer">
+              <div class="why-box-inner">
+                  <div class="tag-img">
+                      <img src="assets/images/dark-assets/online-nft-marketplace.png" alt="Integrate" />
+                  </div>
+                  <h3>Integrate in Minutes</h3>
+                  <p class='p-para-2 pt-2'>A few calls and a couple of lines of code are good to take your product to Market and scale without hassle.</p>
               </div>
-              <div class="market-heading">
-                <h6>NFT Marketplace</h6>
-              </div>
-              <div class="market-body">
-                <p>
-                  Build your own NFT Marketplace like Opensea/Magiceden or build
-                  in app marketplace like Stepn. Everything is easy to build and
-                  scale! To make one get in touch with us
-                </p>
-              </div>
-              <div class="text-center">
-                <a href="mailto:team@shyft.to" class="btn-solid-reg-2"
-                  >Contact Us</a
-                >
-              </div>
-            </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4 px-5">
-          <div class="card market-cards">
-            <div class="card-inner">
-              <div class="market-img-container">
-                <img
-                  class="img-fluid"
-                  src="assets/images/nft-storefront.png"
-                  alt=""
-                />
-              </div>
-              <div class="market-heading">
-                <h6>NFT Storefront</h6>
-              </div>
-              <div class="market-body">
-                <p>
-                  We make it easy for independent artists and collectors to
-                  showcase their art with no code solution. Start your NFT
-                  storefront in minutes using Shyft APIs! Get in touch to know
-                  more.
-                </p>
-              </div>
-              <div class="text-center">
-                <a class="btn-solid-reg-2" href="mailto:team@shyft.to"
-                  >Contact Us</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4 px-5">
-          <div class="card market-cards">
-            <div class="card-inner">
-              <div class="market-img-container">
-                <img
-                  class="img-fluid"
-                  src="assets/images/nft-game.png"
-                  alt=""
-                />
-              </div>
-              <div class="market-heading">
-                <h6>Game NFT</h6>
-              </div>
-              <div class="market-body">
-                <p>
-                  Shyft APIs can make your games future ready by converting
-                  digital assets as NFT. Build custom logic and call our APIs to
-                  manage transactions. Get in touch to know more
-                </p>
-              </div>
-              <div class="text-center">
-                <a class="btn-solid-reg-2" href="mailto:team@shyft.to"
-                  >Contact Us</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
-    </div>
+      <div class="col-xs-12 col-sm-12 col-md-4">
+          <div class="why-box-outer">
+              <div class="why-box-inner">
+                  <div class="tag-img">
+                      <img src="assets/images/dark-assets/crud-nft.png" alt="API" />
+                  </div>
+                  <h3>Superfast APIs</h3>
+                  <p class='p-para-2 pt-2'>We index and cache images and metadata, so your users can get the NFTs they demand in an instant. Build seamless interfaces to allow users to browse, buy and sell NFTs using APIs.</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-4">
+          <div class="why-box-outer">
+              <div class="why-box-inner">
+                  <div class="tag-img">
+                      <img src="assets/images/dark-assets/nft-access-tokens.png" alt="Transparent" />
+                  </div>
+                  <h3>Real-time Stats</h3>
+                  <p class='p-para-2 pt-2'>We give you stats like a collection's floor prices, average price, total traded volume, popular collections, and many more, and that too in real-time.</p>
+              </div>
+          </div>
+      </div>
+        
   </div>
-</div>
+
+  </div>
+</div> -->
+
+
 <div class="support-chain-background">
-  <div class="container-fluid">
-    <div class="container-lg">
-      <div class="support-chain">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="pt-3 pb-5">
-              <h3 class="section-sub-heading">Our Support Chain</h3>
-              <p class="p-caption-heads">
-                Single API and code base for building magic on different
-                blockchains.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div
-          class="wall-icon-cont text-center d-flex flex-wrap justify-content-center"
-        >
-          <div class="wall-icon">
-            <img
-              class="img-fluid"
-              src="assets/images/ethereum.png"
-              alt="Ethereum"
-            />
-            <p class="p-caption">Ethereum</p>
-          </div>
-          <div class="wall-icon">
-            <img
-              class="img-fluid"
-              src="assets/images/polygon.png"
-              alt="Polygon"
-            />
-            <p class="p-caption">Polygon</p>
-          </div>
-          <div class="wall-icon">
-            <img
-              class="img-fluid"
-              src="assets/images/solana-sol-cryptocurrency.png"
-              alt="Solana"
-            />
-            <p class="p-caption">Solana</p>
-          </div>
-          <div class="wall-icon">
-            <img class="img-fluid" src="assets/images/celo.png" alt="Celo" />
-            <p class="p-caption">Celo</p>
-          </div>
-          <div class="wall-icon">
-            <img
-              class="img-fluid"
-              src="assets/images/cosmos.png"
-              alt="Cosmos"
-            />
-            <p class="p-caption">Cosmos</p>
-          </div>
-        </div>
+  
+  <div class="container-lg">
+    <div class="row">
+      <div class="col-sm-10">
+        <h3 class="section-sub-heading">
+          Some of The Things You Can Build With Shyft APIs
+        </h3>
       </div>
     </div>
+    
+    <div class="row g-5 why-us-info-box">
+      <div class="col-xs-12 col-sm-12 col-md-4">
+          <div class="why-box-outer">
+              <div class="why-box-inner">
+                  <div class="tag-img">
+                      <img src="assets/images/dark-assets/online-nft-marketplace.png" alt="Integrate" />
+                  </div>
+                  <h3>Integrate in Minutes</h3>
+                  <p class='p-para-2 pt-2'>A few calls and a couple of lines of code are good to take your product to Market and scale without hassle.</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-4">
+          <div class="why-box-outer">
+              <div class="why-box-inner">
+                  <div class="tag-img">
+                      <img src="assets/images/dark-assets/crud-nft.png" alt="API" />
+                  </div>
+                  <h3>Superfast APIs</h3>
+                  <p class='p-para-2 pt-2'>We index and cache images and metadata, so your users can get the NFTs they demand in an instant. Build seamless interfaces to allow users to browse, buy and sell NFTs using APIs.</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-4">
+          <div class="why-box-outer">
+              <div class="why-box-inner">
+                  <div class="tag-img">
+                      <img src="assets/images/dark-assets/nft-access-tokens.png" alt="Transparent" />
+                  </div>
+                  <h3>Real-time Stats</h3>
+                  <p class='p-para-2 pt-2'>We give you stats like a collection's floor prices, average price, total traded volume, popular collections, and many more, and that too in real-time.</p>
+              </div>
+          </div>
+      </div>
+        
+  </div>
+
   </div>
 
   <div id="the_pricing" class="container-fluid our-pricing-section">
@@ -498,7 +433,7 @@
                   <div class="icon1-list-container">
                     <div class="row icon-list d-flex align-items-center">
                       <div class="col-2">
-                        <img src="assets/images/Vector-ticks.svg" alt="" />
+                        <img src="assets/images/dark-assets/Vector-ticks.svg" alt="" />
                       </div>
                       <div class="col-10 text-start pt-1">
                         <h6>Handle scaling on your own</h6>
@@ -506,7 +441,7 @@
                     </div>
                     <div class="row icon-list d-flex align-items-center">
                       <div class="col-2">
-                        <img src="assets/images/Vector-ticks.svg" alt="" />
+                        <img src="assets/images/dark-assets/Vector-ticks.svg" alt="" />
                       </div>
                       <div class="col-10 text-start pt-1">
                         <h6>Public RPC nodes</h6>
@@ -514,7 +449,7 @@
                     </div>
                     <div class="row icon-list d-flex align-items-center">
                       <div class="col-2">
-                        <img src="assets/images/Vector-ticks.svg" alt="" />
+                        <img src="assets/images/dark-assets/Vector-ticks.svg" alt="" />
                       </div>
                       <div class="col-10 text-start pt-1">
                         <h6>Devnet, Main net and testnet</h6>
@@ -522,7 +457,7 @@
                     </div>
                     <div class="row icon-list d-flex align-items-center">
                       <div class="col-2">
-                        <img src="assets/images/Vector-ticks.svg" alt="" />
+                        <img src="assets/images/dark-assets/Vector-ticks.svg" alt="" />
                       </div>
                       <div class="col-10 text-start pt-1">
                         <h6>Deploy and scale your own</h6>
@@ -530,7 +465,7 @@
                     </div>
                     <div class="row icon-list d-flex align-items-center">
                       <div class="col-2">
-                        <img src="assets/images/Vector-ticks.svg" alt="" />
+                        <img src="assets/images/dark-assets/Vector-ticks.svg" alt="" />
                       </div>
                       <div class="col-10 text-start pt-1">
                         <h6>Raise issues on github</h6>
@@ -538,7 +473,7 @@
                     </div>
                     <div class="row icon-list d-flex align-items-center">
                       <div class="col-2">
-                        <img src="assets/images/Vector-ticks.svg" alt="" />
+                        <img src="assets/images/dark-assets/Vector-ticks.svg" alt="" />
                       </div>
                       <div class="col-10 text-start pt-1">
                         <h6>Hobbyist</h6>
@@ -561,7 +496,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
+        <!-- <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
           <div class="pricing-cards-container">
             <div class="pricing-cards text-center">
               <div class="container__corner--tl">
@@ -660,7 +595,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
           <div class="pricing-cards-container">
             <div class="pricing-cards text-center">
@@ -704,7 +639,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="pt-5 pb-3">
-              <h3 class="section-sub-heading">Engage With Us</h3>
+              <h3 class="section-sub-heading text-light">Engage With Us</h3>
             </div>
           </div>
         </div>
@@ -713,7 +648,7 @@
             <div class="pt-3 text-center text-md-start">
               <span class="inline-image"
                 ><a href="https://discord.gg/8JyZCjRPmr" target="_blank"
-                  ><img src="assets/images/Icons/discord.svg" alt="" /><span
+                  ><img src="assets/images/Icons/discord.svg" alt="" /><span class="text-light" 
                     >Discord</span
                   ></a
                 ></span
@@ -731,7 +666,7 @@
                 >Join community</a
               >
             </div>
-            <p class="p-para-discord text-center text-md-start">
+            <p class="p-para-discord text-center text-md-start text-light">
               Show some love on our social handles...Follow us
             </p>
             <div class="text-center text-md-start">
@@ -748,7 +683,7 @@
                     alt="shyft_github" /></a
               ></span>
             </div>
-            <p class="p-para-discord text-center text-md-start">
+            <p class="p-para-discord text-center text-md-start text-light">
               Discuss your project’s NFT requirements.
             </p>
             <div class="text-center text-md-start">
